--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
   "dependencies": {
     "chalk": "^4.1.2",
     "ejs": "^3.1.6",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "mongoose": "^8.7.1"
   },
   "devDependencies": {
     "@types/express": "^5.0.0",
