--- a/package.json
+++ b/package.json
@@ -14,10 +14,14 @@
   "author": "Vladilen Minin <v@mail.ru>",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "chalk": "^4.1.2",
+    "cookie-parser": "^1.4.7",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
-    "mongoose": "^8.7.1"
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.7.1",
+    "validator": "^13.12.0"
   },
   "devDependencies": {
     "@types/express": "^5.0.0",
